tests/baselines/reference/parserAccessors6.errors.txt
tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors6.ts(2,7): error TS1086: An accessor cannot be declared in an ambient context.


==== tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors6.ts (1 errors) ====
    declare class C {
      set foo(v) { }
          ~~~
!!! error TS1086: An accessor cannot be declared in an ambient context.
    }